log/build_2021-09-09_15-07-33/py_pubsub/stderr.log
  File "/root/rosdir/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/sub.py", line 23
    'z = {} \n').format(msg.pose.pose.position.x,\
                                                    msg.pose.pose.position.y,\
                                                  
                                                                              ^
SyntaxError: unexpected character after line continuation character

